[package]
name = "baffa"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Generic buffer for bytes."
readme = "README.md"
repository = "https://github.com/DoumanAsh/to-str"
license = "BSL-1.0"
keywords = ["no_std"]
categories = ["value-formatting"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]

[features]
std = [] #Enable std trait implementation like io::Write
