[package]
name = "baffa"
version = "0.1.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Generic buffer for bytes."
readme = "README.md"
repository = "https://github.com/DoumanAsh/baffa"
license = "BSL-1.0"
keywords = ["no_std", "buffer"]
categories = ["data-structures"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]

[features]
std = [] #Enable std trait implementation like io::Write
alloc = [] #Enables trait implementation for dynamic buffers in alloc crate
